AP-2009-04-09-0: Enhancem:   o added test bugs/issuezilla/2967
                             o checkpoint object interface
                 Cleanup:    cleanup of some deprecated functions and replaced it's
                             usages
                 Issue:      86
                 Review:     CR

RH-2009-04-08-0: Bugfix:     Hedeby: Check in RH-2009-03-30-0 broke user system 
                             installation
                 Belongs To: RH-2009-03-30-0
                 Review:     MB

JG-2009-04-07-0: Enhancem.:  extended functional/usage check to cover IZ 2977.
                 Review:     RD

RD-2009-04-07-0: Bugfix:     some minor fixes
                 Review:     CR

CR-2009-04-06-0: Enhancem.:  o added new testsuite command line parameter:
                               wait_on_error
                 Review:     MD

TB-2009-04-06-1: Bugfix:     checking for core files now only checks files, no
                             directories
                 Review:     CR

TB-2009-04-06-0: Enhancem:   implemented TS test for hedeby issue 632
                 Review:     RH

LP-2009-04-02-0: Enhancem.:  TS updated for changed JMX messages
                 Review:     EB

LP-2009-03-31-0: Enhancem.:  TS updated for changed JMX messages
                 Review:     JO

CR-2009-03-30-1: Bugfix:     o Fixed jsv_ge test
                             o Fixed xml qhost test
                 Cleanup:    o Also delete created tmp directories
                 Enhancem.:  o sumbit_job can now exclude errors
                 Review:     MD, JG (TB: hedeby patch run)

TB-2009-03-30-1: Bugfix:     Test for issue 619 now cleans up spool dir files
                 Enhancem:   SI use case test submits array jobs as performance
                             improvement
                 Review:     RH 

CR-2009-03-30-0: Enhancem.:  Allow larger timeouts for vi commands
                 Review:     AA

TB-2009-03-30-0: Bugfix:     Fixed cleanup for issue_633